--- a/2024-08-18/src/package.json
+++ b/2024-08-18/src/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "slidev",
     "build": "slidev build --base /2023/nuxt-devtools-strasbourg/ --out ../../dist/2023/nuxt-devtools-strasbourg",
-    "export": "slidev export --per-slide --output ../2024-08-18-vue-js-training.pdf"
+    "export": "slidev export --per-slide --output ../vue-js-training.pdf",
+    "exportToPpt": "slidev export --format pptx --per-slide --output ../vue-js-training.pptx"
   }
 }
