--- a/2024-08-18/src/package.json
+++ b/2024-08-18/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2023/nuxt-devtools-strasbourg/ --out ../../dist/2023/nuxt-devtools-strasbourg",
+    "build": "slidev build --base /2024/vue-js-training/ --out ../../dist/2024/vue-js-training",
     "export": "slidev export --per-slide --output ../vue-js-training.pdf",
     "exportToPpt": "slidev export --format pptx --per-slide --output ../vue-js-training.pptx"
   }
