--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^22.4.1",
     "@types/prompts": "^2.4.9",
     "@types/seedrandom": "^3.0.8",
+    "dayjs": "^1.11.13",
     "eslint": "^9.9.0",
     "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
