--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 
 [build]
 publish = "dist"
-command = "pnpm run build"
+command = "pnpm i && pnpm run build"
 
 [build.environment]
 NODE_VERSION = "20"
